Fix add button z-index

--- a/src/elements/pages/partners-page-components/partner-info-view/partner-staff-members-tab/partner-staff-members-tab.scss
+++ b/src/elements/pages/partners-page-components/partner-info-view/partner-staff-members-tab/partner-staff-members-tab.scss
@@ -12,24 +12,12 @@
         }
     }
 
-
-    .add-button {
-        position: absolute;
-        right: 15px;
-        top: 4px;
-        width: 40px;
-        height: 40px;
-        color: rgba(255, 255, 255, 0.7);
-        z-index: 10;
-    }
-
     .search-input-container {
         position: absolute;
         right: 55px;
         height: 48px;
         color: #ffffff;
         overflow: hidden;
-        z-index: 10;
 
         .search-input {
             width: 5%;
